# novel-forge-kdp

./: .gitignore  README.md  pyproject.toml
docs/: OPERATIONS.md  SPECIFICATION.md
scripts/: make_smoke_workspace.py  review_final_manuscripts.py
src/novel_forge_kdp/: artifact_paths.py  chapter_manuscript_assembler.py  cli.py  exporter.py  llm.py  llm_task_runner.py  manuscript_assembler.py  models.py  outline_scene_processor.py  outline_validation.py  paths.py  prompts.py  quality.py  repository.py  scene_workflow.py  schemas.py  series_continuation_workflow.py  series_planner.py  tasks.py  volume_completion_workflow.py  volume_export_workflow.py  volume_outline_workflow.py  volume_progress_service.py  volume_writing_workflow.py  workflow.py
src/novel_forge_kdp/prompts/: bible_update.md  review.md  revise_scene.md  revise_volume.md  scene_draft.md  series_plan.md  volume_outline.md  volume_review.md
src/novel_forge_kdp/schemas/: bible_update.json  review.json  revised_scene.json  revised_volume.json  scene_draft.json  series_plan.json  volume_outline.json  volume_review.json
tests/: fakes.py  test_artifact_paths.py  test_chapter_manuscript_assembler.py  test_core.py  test_exporter.py  test_hardening.py  test_manuscript_assembler.py  test_outline_validation.py  test_quality.py  test_repository.py  test_scene_workflow.py  test_schema_limits.py  test_series_continuation_workflow.py  test_task_runner.py  test_tasks.py  test_volume_completion_llm_calls.py  test_volume_export_workflow.py  test_volume_outline_workflow.py  test_volume_progress_service.py
